* bit:image:preview - fixed z-index bug * help: fixed clip hover being clipped by bottom of page

--- a/meteor-app/client/components/maps/styles.scss
+++ b/meteor-app/client/components/maps/styles.scss
@@ -107,10 +107,10 @@ $color-second: #C7F464;
   background: $color-first;
 }
 
-
 .wipe.bit-preview {
   display: none;
   opacity: 0;
+  z-index: 100; // TODO: write function to find highest z-index of any bit existing on canvas
 }
 
 .wipe.bit-preview .mask {
